tests/int/snapshots/integration__int__use_command__module_module__analyzer_flags_r_t_e_G.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - "module::analyzer"
    - "-r"
    - "-t"
    - "-e"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
crate::constants::ATTR_CFG
crate::constants::MODULE_NAME_TEST
crate::constants::PATH_QUALIFIER_CRATE
crate::constants::PATH_QUALIFIER_SELF
crate::constants::PATH_QUALIFIER_SUPER
crate::module::analyzer::AnalyzerError
crate::module::analyzer::CrateAnalyzer
crate::module::analyzer::FileReferences
crate::module::analyzer::Result
crate::module::path::GroupItem
crate::module::path::PathPrefix
crate::module::path::PathSuffix
crate::module::path::TypeReference

----- stderr -----
