tests/int/snapshots/integration__int__use_command__module_module__path_flags_r.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - "module::path"
    - "-r"
---
success: true
exit_code: 0
----- stdout -----
crate::constants::PATH_QUALIFIER_SELF

----- stderr -----
